--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -85,47 +85,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover="dropdown" data-toggle="dropdown" href="index.html">
-                            Home <i class="fa fa-angle-down"></i>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="index.html">Home Parallax</a>
-                            </li>
-                            <li>
-                                <a href="index1.html">Home Seq-slider1</a>
-                            </li>
-                            <li>
-                                <a href="index2.html">Home Seq-slider2</a>
-                            </li>
-                        </ul>
-                    </li>
-
-
-
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover="dropdown" data-toggle="dropdown" href="#">
-                            Blog <i class="fa fa-angle-down"></i>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="blog.html">Blog</a>
-                            </li>
-                            <li>
-                                <a href="blog-two-col.html">Blog two column</a>
-                            </li>
-                            <li>
-                                <a href="blog-detail.html">Blog Single Image</a>
-                            </li>
-                            <li>
-                                <a href="blog-detail-video.html">Blog single video</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                    @Html.Partial("Menu")
 
                     <li>
 
