--- a/Views/Listingadmin/Edit.cshtml
+++ b/Views/Listingadmin/Edit.cshtml
@@ -6,8 +6,7 @@
 }
 
 <h2>Edit</h2>
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Listingadmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -16,6 +15,15 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
+
+        
+
+        <div class="form-group">
+            Image
+            <div class="col-md-10">
+                <input type="file" name="UploadedFile" class="form-control" />
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.PropertyTypeId, "PropertyTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
