--- a/Views/Listingadmin/Index.cshtml
+++ b/Views/Listingadmin/Index.cshtml
@@ -5,7 +5,24 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Upload</h2>
+
+@using (Html.BeginForm("Upload", "Listingadmin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    <div class="form-horizontal">
+        <div class="form-group">
+
+            <div class="col-md-10">
+                <input type="file" name="UploadedFile" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" name="Submit" value="Submit" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
 
 <p>
     @Html.ActionLink("Create New", "Create")
