fix auction date

--- a/Views/Listingadmin/Index.cshtml
+++ b/Views/Listingadmin/Index.cshtml
@@ -27,7 +27,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+@*<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.AuctionBank.Nama)
@@ -198,4 +198,4 @@
     </tr>
 }
 
-</table>
+</table>*@
